--- a/Business/pom.xml
+++ b/Business/pom.xml
@@ -4,21 +4,44 @@
   <artifactId>Business</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>MyBusiness 04</name>
-   
+ 
+ <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.11.0</version>
+            <configuration>
+                <source>17</source>
+                <target>17</target>
+                <encoding>UTF-8</encoding>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+  
 
 	<dependencies>
+		
+    <dependency>
+        <groupId>org.apache.pdfbox</groupId>
+        <artifactId>pdfbox</artifactId>
+        <version>3.0.3</version> <!-- Replace with the version you prefer or need -->
+    </dependency>
 
+    <!-- (Optional) Apache Commons Logging - used by PDFBox -->
+    <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+        <version>1.2</version>
+    </dependency>
+    
 	<dependency>
 		<artifactId>pdf-renderer</artifactId>
 		<groupId>org.swinglabs</groupId>
-	    <version>1.0.5.1</version> <!-- Replace with the actual version --> <!-- Set scope to compile or another appropriate scope -->
+	    <version>1.0.5.1</version> 
 	</dependency>
 	
-	<dependency>
-    <groupId>org.apache.pdfbox</groupId>
-    <artifactId>pdfbox</artifactId>
-    <version>2.0.29</version> <!-- Use the latest stable version available -->
-</dependency>
 
 		</dependencies>
 
